--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,6 +1,14 @@
 [deps]
 CHSH_Test = "936a3a7a-f784-4ee0-887c-27a1b4c296dc"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+Mooncake = "da2b9cff-9c12-43a0-ae48-6db2b0edb7d6"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
+TuringUtilities = "35dc62cd-6c01-44e1-a736-6cc36bfce0cc"
 
 [sources]
 CHSH_Test = {path = ".."}
