--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,6 +3,7 @@ CHSH_Test = "936a3a7a-f784-4ee0-887c-27a1b4c296dc"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+FreqTables = "da1fdf0e-e0ff-5433-a45f-9bb5ff651cb1"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 Mooncake = "da2b9cff-9c12-43a0-ae48-6db2b0edb7d6"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
