--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,13 @@
 name = "CHSH_Test"
 uuid = "936a3a7a-f784-4ee0-887c-27a1b4c296dc"
-authors = ["itsdfish <itsdfish@gmail.com> and contributors"]
 version = "1.0.0-DEV"
+authors = ["itsdfish <itsdfish@gmail.com> and contributors"]
+
+[deps]
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 
 [compat]
+SafeTestsets = "0.1.0"
 julia = "1.10.10"
 
 [extras]
